--- a/projectrqg/index.html
+++ b/projectrqg/index.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Random Quote Generator</title>
 </head>
 <body>
-    <header>
-        <h1>Random Quote Generator</h1>
-    </header>
-    <main class="container">
-        <div id="quote-container">
-            <p id="quote"></p>
-            <p id="author"></p>
+    <section class="container">
+        <h1 class="title">Quote Generator</h1>
+        <div class="container_1">
+            <div id="quote-container">
+                <p id="quote"></p>
+                <p id="author"></p>
+            </div>
+            <div class="button-container">
+                <button id="new-quote-btn" onclick="getRandomQuote()" title="Generate New Quote">New Quote</button>
+                <a id="tweet-btn" target="_blank" href="https://twitter.com/intent/tweet?text=">
+                    <img title="Tweet Quote" src="twitter.png" height="30dp" width="25dp">
+                </a>
+                <button id="btnsz" onclick="copyQuote()" title="Copy Quote"><img src="copy-two-paper-sheets-interface-symbol.png" height="30dp" width="25dp"></button>
+            </div>
         </div>
-        <div class="button-container">
-            <button id="new-quote-btn" onclick="getRandomQuote()">New Quote</button>
-            <a id="tweet-btn" target="_blank" href="https://twitter.com/intent/tweet?text=">
-                Tweet
-            </a>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2023 Random Quote Generator Group 6</p>
-    </footer>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
